set version of build and also main libraries used
