# httpd/misc_handlers.go
@@ -1,9 +1,11 @@
 package httpd
 
 import (
+	"cloudbackup/misc"
 	"fmt"
 	"github.com/julienschmidt/httprouter"
 	"net/http"
+	"runtime"
 )
 
 // serve / and logger.Info requester
@@ -21,5 +23,15 @@ func (srvSrc SrvData) handlerRoot(w http.ResponseWriter, r *http.Request, _ http
 			logger.Debug("handlerRoot() - could not write response back to client ")
 		}
 	}
+	logger.Info(fmt.Sprintf("HTTP request for RequestURI: %s from requester: %s ", r.RequestURI, r.RemoteAddr))
+}
+
+func (srvSrc SrvData) handlerVersion(w http.ResponseWriter, r *http.Request, _ httprouter.Params) {
+	LogHttpRequest(r)
+	v := misc.CloudBackupVersion()
+	v.OS = runtime.GOOS
+	v.Arch = runtime.GOARCH
+	v.Runtime = runtime.Version()
+	JSONSuccessWithResult(w, "success", "success", v)
 	logger.Info(fmt.Sprintf("HTTP request for RequestURI: %s from requester: %s ", r.RequestURI, r.RemoteAddr))
 }
