# webstatic/docs_api/swagger.yaml
@@ -536,6 +536,22 @@ paths:
           schema:
             $ref: '#/definitions/ApiResponseError'
       security: []
+  /report/version:
+    get:
+      tags:
+        - report
+      summary: Return software version details
+      description: >-
+        Get the CloudBackup server version, build date, build target architecure and operating system and also Cloud Provider SDK versions used.
+      operationId: ReportVersion
+      produces:
+        - application/json
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            $ref: '#/definitions/ApiResponseReportVersion'
+      security: []
 securityDefinitions:
   backup_auth:
     type: basic
@@ -1326,6 +1342,41 @@ definitions:
         type: boolean
         example: true
         description: If true then it means that the item(filed/dir/symlink) no longer existed at the time of this backup. This implies that this particular item was backed up in the past hence we have knowledge of it. Evenutally this knowledge will be lost once this particular backup and all before it will be deleted (and no further backup still has any reference to the item). If the item was never backed up by the backup software then no knowledge of it would exist in the internal database. The main use for this value is to know when a particular item was no longer on the system and if it subsequently re-appeared. If this value is true then $upload_date meaning becomes "when it was detected the item no longer exists".
+  ResultReportVersion:
+    type: object
+    properties:
+      AwsSdk:
+        type: string
+        example: v1.30.15
+        description: Used version of the AWS SDK for GO Lang
+      GcpStorageSdk:
+        type: string
+        example: v1.6.0
+        description: Used version of the GCP Storage SDK for GO Lang
+      AzureBlobStorageSdk:
+        type: string
+        example: v0.8.0
+        description: Used version of the Azure Blob Storage SDK for GO Lang
+      CloudBackup:
+        type: string
+        example: 0.0.1-a46f20b1
+        description: Version of the CloudBackup server
+      BuildDate:
+        type: string
+        example: 2021-12-10T09:46:08Z
+        description: UTC Date and time when the CloudBackup server was built from source code
+      OS:
+        type: string
+        example: linux
+        description: Operating System for which CloudBackup server was built for
+      Arch:
+        type: string
+        example: amd64
+        description: Architecture for which CloudBackup server was built for
+      Runtime:
+        type: string
+        example: amd64
+        description: GO Lang runtime version
   BackupJobName:
     type: object
     properties:
@@ -1559,6 +1610,19 @@ definitions:
         example: success
       result:
         $ref: '#/definitions/ResultBackupJobStatus'
+  ApiResponseReportVersion:
+    type: object
+    properties:
+      code:
+        type: string
+        example: success
+      message:
+        type: string
+        example: success
+      result:
+        type: array
+        items:
+          $ref: '#/definitions/ResultReportVersion'
 externalDocs:
   description: Find out more about Swagger
   url: 'http://swagger.io'
